[package]
name = "discover_fiply"
version = "0.1.0"
authors = ["Julien Tournay <julient@spotify.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
reqwest = "~0.9.17"
base64 = "0.11.0"
log = "0.4"
env_logger = "0.7.1"
humantime = "1.3.0"
rspotify = "0.7.0"
